<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Hammer Dice</string>
    <string name="title_activity_main">Hammer Dice</string>
    <string name="plus_2" translatable="false">2+</string>
    <string name="plus_3" translatable="false">3+</string>
    <string name="plus_4" translatable="false">4+</string>
    <string name="plus_5" translatable="false">5+</string>
    <string name="plus_6" translatable="false">6+</string>
    <string name="count_button">Count!</string>
    <string name="dice_number_hint">Number of attacks</string>
    <string name="dice_to_kill_hint">Kills needed</string>
    <string name="save_button_on">Disable Armour Save</string>
    <string name="save_button_off">Enable Armour Save</string>
    <string name="to_hit_text">To Hit</string>
    <string name="to_wound_text">To Wound</string>
    <string name="donate">Donate</string>
    <string name="donate_dialog_text">Please donate this app.</string>
    <string name="cancel">Cancel</string>
    <string name="authors">Authors: OwAb Owca&amp;Abel</string>
    <string name="title_activity_chart">Chart of your kills</string>
    <string name="chart_button">Count</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="y_chart">chance to Wound</string>
    <string name="x_chart">minimum number of Wounds</string>
    <string name="max_toast">Max numbers of attack is 50</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1366713450659802/5903297843</string>
    <string name="update_app">Update app</string>

</resources>
