<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:context="${relativePackage}.${activityClass}" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dice_number_hint" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dice_number_hint"
                android:inputType="number" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewHit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/to_hit_text"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/group0radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/plus_2" />

            <RadioButton
                android:id="@+id/group0radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/plus_3" />

            <RadioButton
                android:id="@+id/group0radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_4" />

            <RadioButton
                android:id="@+id/group0radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_5" />

            <RadioButton
                android:id="@+id/group0radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_6" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewWound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/to_wound_text"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/group2radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/plus_2" />

            <RadioButton
                android:id="@+id/group1radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_3" />

            <RadioButton
                android:id="@+id/group1radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_4" />

            <RadioButton
                android:id="@+id/group1radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_5" />

            <RadioButton
                android:id="@+id/group1radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_6" />
        </RadioGroup>

        <ToggleButton
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="showSave"
            android:textOff="@string/save_button_off"
            android:textOn="@string/save_button_on" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:visibility="gone" >

            <RadioButton
                android:id="@+id/RadioButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/plus_2" />

            <RadioButton
                android:id="@+id/RadioButton03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_3" />

            <RadioButton
                android:id="@+id/RadioButton05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_4" />

            <RadioButton
                android:id="@+id/RadioButton04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_5" />

            <RadioButton
                android:id="@+id/RadioButton02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_6" />
        </RadioGroup>

        <TextView
            android:id="@+id/chance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="30sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/chart_button"
            android:id="@+id/chart_button"
            android:layout_gravity="center_horizontal"
            android:onClick="chartClick" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/donate"
            android:onClick="donateClick"
            android:src="@drawable/btn_donate" />
        
        <TextView
            android:id="@+id/authorsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/authors" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_gravity="center_horizontal">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</ScrollView>